# GROUPOID

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  PROBLEMS.md  README.md  REPRODUCE.md  SECURITY.md  STATUS.md  codemeta.json  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  mathematical_correction.md
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
benchmarks/: baseline.json  mnist_federated.py  test_karcher_benchmark.py
docs/: api.md  index.md  quickstart.md  theory.md
docs/overrides/: 404.html
examples/: README.md  synthetic_curve_demo.py
experiments/: federated_mnist.py
groupoid/: __init__.py  aggregation.py  cohomology.py  groupoid.py  laplacian.py  manifold.py  optimizer.py  persistence.py  sheaf.py  transport.py
scripts/: reproduce_sheaf_laplacian.py
tests/: test_aggregation_disconnected.py  test_cohomology_cocycle.py  test_coverage_gaps.py  test_defensive_paths.py  test_imports.py  test_integration.py  test_persistence.py  test_persistence_dimension_labels.py  test_sheaf_laplacian.py  test_smoke.py  test_transport_validation.py
tests/theory/: test_mathematical_invariants.py
