[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groupoid"
version = "0.1.0.dev0"
description = "Research prototype: groupoid-based aggregation for federated learning on Riemannian manifolds"
readme = "README.md"
license = "Apache-2.0"
# Upper bound is real: the numpy<2.0 / scipy<1.14 pins below (required for
# geomstats compatibility) have no wheels for Python 3.13+, so 3.13 would
# attempt a doomed source build. Capping here makes pip refuse cleanly with a
# Requires-Python message instead. Supported: 3.10-3.12.
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Santiago Maniches", email = "santiago.maniches@gmail.com"},
]
keywords = [
    "federated-learning",
    "riemannian-geometry",
    "groupoid",
    "topology",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "geomstats>=0.7",
    "pymanopt>=2.0",
    "ripser>=0.6",
    "persim>=0.3",
    "POT>=0.9",
    "networkx>=3.0",
    "einops>=0.7",
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<1.14",
    "torch>=2.0",
    "pydantic>=2.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
# Planned, not yet integrated into any code path
privacy = [
    "opacus>=1.4",
    "tenseal>=0.3",
]
numerical = [
    "numba>=0.58",
    "jax>=0.4",
    "jaxlib>=0.4",
]
experiment = [
    "wandb>=0.16",
]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.0",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.0",
    "bandit>=1.7",
    "safety>=3.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = [
    "groupoid[privacy,numerical,experiment,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/smaniches/GROUPOID"
Repository = "https://github.com/smaniches/GROUPOID"
Issues = "https://github.com/smaniches/GROUPOID/issues"

[tool.setuptools.packages.find]
include = ["groupoid*"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["N806"]

[tool.black]
target-version = ["py310"]
line-length = 99

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "benchmark: marks benchmark tests",
]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
